fix: padding on mobile

--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -244,6 +244,7 @@ blockquote {
     max-width: calc(#{$narrow-size} - (#{$spacing-full}));
     padding-right: $spacing-full - 10;
     padding-left: $spacing-full - 10;
+    padding-top: 2em;
 
     &.blurry {
       animation: 0.2s ease-in forwards blur;
